--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 pandas = "^2.2.2"
+sqlalchemy = "^2.0.34"
+postgres = "^4.0"
 
 
 [build-system]
