--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,8 @@ services:
     container_name: weather_etl
     build:
       context: .
+    env_file:
+      - .env
     depends_on:
       postgres:
         condition: service_healthy
