--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,14 @@ sqlalchemy = "^2.0.34"
 postgres = "^4.0"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.8.0"
+isort = "^5.13.2"
+flake8 = "^7.1.1"
+
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
